Removed 'block-default-styles' less mixin as it prevented alignment of the block

--- a/src/blocks/common.blocks/socials/socials.less
+++ b/src/blocks/common.blocks/socials/socials.less
@@ -1,12 +1,8 @@
 .socials {
-  .block-default-styles();
 
   &__inner {
-    .block-default-styles();
-
     display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
+    flex-flow: row nowrap;
   }
 
   &__list {
